<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Guileless Bopomofo</string>
    <string name="display_name_bopomofo_keyboard_ime">Bopomofo</string>
    <string name="libchewing_init_fail">Failed to initialize libchewing: %1$s</string>
    <string name="hintEditTextTestTextInput">Test text input here</string>
    <string name="chewing_data_files_status">Chewing data files status:</string>
    <string name="engineering_mode_label">Engineering Mode</string>
    <string name="general_settings_label">General settings</string>
    <string name="bopomofo_keyboard_layout">Bopomofo keyboard layout</string>
    <string name="bopomofo_keyboard_layout_description">Choose a Bopomofo keyboard layout</string>
    <string name="bopomofo_keyboard_layout_dachen">DaChen</string>
    <string name="bopomofo_keyboard_layout_hsu">Hsu</string>
    <string name="bopomofo_keyboard_layout_eten26">E-TEN 26 Keys</string>
    <string name="guileless_bopomofo_inputservice_status">Guileless Bopofomo service status</string>
    <string name="guileless_bopomofo_service_status">Current Guileless Bopomofo service is:</string>
    <string name="guileless_bopomofo_service_status_description">Detect current Guileless Bopomofo service status</string>
    <string name="service_is_enabled">Enabled</string>
    <string name="service_is_disabled">Disabled</string>
    <string name="launch_input_method_system_settings">Launch keyboard system  settings</string>
    <string name="applcation_version_label">Application version</string>
    <string name="fullscreen_mode_setting_title">Fullscreen mode</string>
    <string name="fullscreen_mode_setting_description">If enabled, keyboard will fit to fullscreen</string>
    <string name="fullscreen_when_in_landscape_setting_switch">Enable fullscreen when in landscape?</string>
    <string name="fullscreen_when_in_portrait_setting_switch">Enable fullscreen when in portrait?</string>
    <string name="back_to_main_layout">Back to keyboard</string>
    <string name="space_as_selection_key">Use Space key as candidates selection shortcut key</string>
    <string name="space_as_selection_key_description">If enabled, when Space key is being pressed, candidates selection list will be opened for the last word or phrase in the pre-edit buffer</string>
    <string name="space_as_selection_key_switch_label">Use Space key as candidates selection shortcut key?</string>
    <string name="rearward_phrase_choice">Choose phrase rearward</string>
    <string name="rearward_phrase_choice_switch">Choose phrase rearward?</string>
    <string name="rearward_phrase_choice_description">If enabled, phrase will be chosen before the cursor</string>
    <string name="english_prediction">English word prediction</string>
    <string name="english_prediction_description">If enabled, word suggestions are offered above the keyboard while typing English in alphanumeric mode. Suggestions come from a built-in word list, nothing you type is stored.</string>
    <string name="english_prediction_switch">Enable English word prediction?</string>
    <string name="haptic_feedback_strength">Haptic feedback strength</string>
    <string name="haptic_feedback_strength_description">Adjust haptic feedback strength of character keys, the effect varies on different devices. Set this to 0 will disable haptic feedback effect.</string>
    <string name="current_mode">Mode:</string>
    <string name="mode_bopomofo">Bopomofo</string>
    <string name="mode_alphanumerical">Alphanumerical</string>
    <string name="physical_keyboard_settings">Physical keyboard settings</string>
    <string name="enable_physical_keyboard_description">Use physical (Bluetooth, USB or on-device) keyboard, if enabled, the layout will switch from software keyboard to a compact look</string>
    <string name="tips_using_physical_keyboard">While using physical keyboard, toggle modes between Bopomofo &amp; English by pressing <b>Left Shift</b> + <b>Space</b>; Switch to other input methods by pressing <b>Left Alt</b> + <b>I</b>; To toggle width mode, press <b>Alt</b> + <b>Space</b>.</string>
    <string name="physical_selection_keys">Physical candidate selection keys</string>
    <string name="keybutton_popup_image">Current touched key button</string>
    <string name="key_button_height_label">Adjust height of key buttons</string>
    <string name="key_button_height_description">Adjust height of key buttons. (Default value: 52dp)</string>
    <string name="switch_display_hsu_qwerty_layout">Enable QWERTY keycaps for Hsu layout?</string>
    <string name="switch_display_eten26_qwerty_layout">Enable QWERTY keycaps for E-TEN 26 keys layout?</string>
    <string name="user_interface_settings">User interface settings</string>
    <string name="haptic_feedback_strength_setting">Level: %1$d</string>
    <string name="key_button_height_setting">%1$ddp</string>
    <string name="setting_apply_same_haptic_feedback_strength_to_function_buttons">Apply same haptic feedback strength to function buttons?</string>
    <string name="text_view_setting_ime_switch">Switch Input Methods</string>
    <string name="text_view_setting_description_ime_switch">Toggle the input method switch key between single or double touch</string>
    <string name="switch_setting_ime_switch">Use double touch to switch to next input method?</string>
    <string name="bopomofo_keyboard_layout_eten41">E-TEN 41 Keys</string>
    <string name="please_enable_guileless_bopomofo_first">Please enable Guileless Bopomofo first</string>
    <string name="labelHardwareKeyboardType">Hardware keyboard type:</string>
    <string name="labelHardwareKeyboardHiddenStatus">Hardware keyboard hidden status:</string>
    <string name="chewing_data_files_status_ok">OK</string>
    <string name="chewing_data_files_status_error">error!</string>
    <string name="hardware_keyboard_type_qwerty">QWERTY</string>
    <string name="hardware_keyboard_type_12key">12 Keys</string>
    <string name="hardware_keyboard_type_unknown_or_missing">Unknown or missing</string>
    <string name="hardware_keyboard_hidden_status_no">Not hidden</string>
    <string name="hardware_keyboard_hidden_status_yes">Hidden</string>
    <string name="hardware_keyboard_hidden_status_undefined">Undefined hidden status</string>
    <string name="hardware_keyboard_hidden_status_unknown">Unknown status</string>
    <string name="user_preferred_hardware_keyboard_yes">Yes</string>
    <string name="user_preferred_hardware_keyboard_no">No</string>
    <string name="user_preferred_hardware_keyboard_unknown">Unknown</string>
    <string name="full_width_mode">Full width</string>
    <string name="half_width_mode">Half width</string>
    <string name="shape_mode_changed">Shape mode: %1$s</string>
    <string name="app_version" tools:ignore="MissingTranslation">%1$s (libchewing: %2$s)</string>
    <string name="textViewSettingsConversionEngines">Choose conversion engines</string>
    <string name="textViewSettingsDescriptionConversionEngines">Choose a conversion engine</string>
    <string name="radioButtonSimpleConversionEngine">Simple</string>
    <string name="radioButtonChewingConversionEngine">Chewing</string>
    <string name="radioButtonFuzzyChewingConversionEngine">Fuzzy Chewing</string>
    <string name="textViewSettingsConversionEnginesPhysical">Conversion engine when a physical keyboard is attached</string>
    <string name="textViewSettingsDescriptionConversionEnginesPhysical">Choose the conversion engine to use while a hardware keyboard is in use.</string>
    <string name="capsLockIsOn">Caps Lock is ON</string>
    <string name="capsLockIsOff">Caps Lock is OFF</string>
    <string name="hintEditTextTestNumberInput">Test digits input here</string>
    <string name="switch_setting_enable_ime_switch">Show the IME switching key-button?</string>
    <string name="textViewCurrentWidthModeValue">(width mode)</string>
    <string name="physical_bopomofo_keyboard_layout">Physical Bopomofo Keyboard Layout</string>
    <string name="bopomofo_keyboard_layout_ibm">IBM\t\t</string>
    <string name="bopomofo_keyboard_layout_gin_yieh">Gin Yieh</string>
    <string name="bopomofo_keyboard_layout_dvorak">Dvorak DaChen</string>
    <string name="bopomofo_keyboard_layout_dvorak_hsu">Dvorak Hsu</string>
    <string name="bopomofo_keyboard_layout_dachen26">DaChen 26 Keys</string>
    <string name="bopomofo_keyboard_layout_hanyu_pinyin">HanYu PinYin</string>
    <string name="bopomofo_keyboard_layout_thl_pinyin">Taíwan HuaYu Luoma PinYin</string>
    <string name="bopomofo_keyboard_layout_mps2_pinyin">Mandarin Phonetic Symbols II PinYin</string>
    <string name="bopomofo_keyboard_layout_carpalx">CarpalX</string>
    <string name="bopomofo_keyboard_layout_colemak_dh_ansi">Colemak-DH ANSI</string>
    <string name="bopomofo_keyboard_layout_colemak_dh_orth">Colemak-DH Ortholinear</string>
    <string name="bopomofo_keyboard_layout_colemak">Colemak</string>
    <string name="bopomofo_keyboard_layout_workman">Workman</string>
    <string name="user_phrase_manager_title">User Phrase Manager</string>
    <string name="user_phrase_manager_description">View, add, or delete your custom user phrases</string>
    <string name="manage_user_phrases">Manage User Phrases</string>
    <string name="no_user_phrases">No user phrases found</string>
    <string name="search_user_phrases_hint">Search phrases or bopomofo</string>
    <string name="search_user_phrases_no_results">No matching phrases found</string>
    <string name="add_user_phrase">Add</string>
    <string name="delete_user_phrase">Delete</string>
    <string name="delete_user_phrase_title">Delete User Phrase</string>
    <string name="delete_user_phrase_message">Delete \"%1$s\"?</string>
    <string name="user_phrase_input_hint">Phrase (e.g. 樸實注音)</string>
    <string name="bopomofo_input_hint">Bopomofo (e.g. ㄆㄨˇ ㄕˊ ㄓㄨˋ ㄧㄣ)</string>
    <string name="user_phrase_input_empty">Please enter both phrase and bopomofo</string>
    <string name="user_phrase_add_failed">Failed to add user phrase</string>
    <string name="backup_user_phrases">Backup</string>
    <string name="restore_user_phrases">Restore</string>
    <string name="backup_success">Backed up %1$d user phrases</string>
    <string name="backup_failed">Failed to backup user phrases</string>
    <string name="restore_confirm_message">Restore %1$d user phrases from backup?</string>
    <string name="restore_success">Restored %1$d user phrases</string>
    <string name="restore_failed">Failed to restore user phrases</string>
    <string name="restore_no_data">No valid user phrases found in the file</string>
    <string name="restore_invalid_file">Invalid backup file</string>
    <string name="restore_invalid_header">Invalid file format: missing or incorrect header row</string>
    <string name="restore_malformed_row">Malformed data at row %1$d, import rejected</string>
    <string name="restore_invalid_bopomofo">Invalid bopomofo at row %1$d, import rejected</string>
    <string name="reset_user_phrase_data">Reset</string>
    <string name="reset_user_phrase_data_confirm_first">This will delete all user phrases and auto-learned history. This action cannot be undone. Are you sure?</string>
    <string name="reset_user_phrase_data_confirm_second">This is your last chance. All user phrases and auto-learned history will be permanently deleted. Proceed?</string>
    <string name="reset_user_phrase_data_done">User phrase data has been reset</string>
    <string name="analyze_bopomofo">Analyze Bopomofo</string>
    <string name="analyze_bopomofo_hint">Enter a phrase above and tap \"Analyze Bopomofo\" to suggest readings, or type bopomofo manually below.</string>
    <string name="analyze_bopomofo_no_results">Unable to find bopomofo readings for this phrase</string>
    <string name="analyze_bopomofo_select">Select a bopomofo reading:</string>
</resources>