<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Guileless Bopomofo
  ~ Copyright (C) 2025.  YOU, Hui-Hong <hiroshi@miyabi-hiroshi.com>
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <https://www.gnu.org/licenses/>.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_general"
        android:icon="@drawable/ic_build_settings"
        android:title="@string/general_settings_label" />
    <item
        android:id="@+id/nav_user_interface"
        android:icon="@drawable/ic_touch_app"
        android:title="@string/user_interface_settings" />
    <item
        android:id="@+id/nav_physical_keyboard"
        android:icon="@drawable/ic_keyboard"
        android:title="@string/physical_keyboard_settings" />
</menu>
